@@ -1,260 +1,188 @@
 package com.epam.finaltask.service;
 
 import com.epam.finaltask.dto.VoucherDTO;
-import com.epam.finaltask.exception.EntityNotFoundException;
-import com.epam.finaltask.mapper.VoucherMapper;
 import com.epam.finaltask.model.*;
 import com.epam.finaltask.repository.UserRepository;
 import com.epam.finaltask.repository.VoucherRepository;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
+import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
+import java.math.BigDecimal;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.UUID;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 public class VoucherServiceImpl implements VoucherService {
 
     private final VoucherRepository voucherRepository;
-    private final VoucherMapper voucherMapper;
     private final UserRepository userRepository;
+    private final ModelMapper modelMapper;
 
-    public VoucherServiceImpl(VoucherRepository voucherRepository, VoucherMapper voucherMapper, UserRepository userRepository) {
+    public VoucherServiceImpl(VoucherRepository voucherRepository,
+                              UserRepository userRepository,
+                              ModelMapper modelMapper) {
         this.voucherRepository = voucherRepository;
-        this.voucherMapper = voucherMapper;
         this.userRepository = userRepository;
+        this.modelMapper = modelMapper;
     }
-
-    @Override
-    public void changeTourStatus(String id, String status) {
-        Voucher existingVoucher = voucherRepository.findById(UUID.fromString(id))
-                .orElseThrow(() -> new EntityNotFoundException("Voucher with Id " + id + " not found"));
-
-        if ("CANCELED".equalsIgnoreCase(status) || "REGISTERED".equalsIgnoreCase(status)) {
-            User user = existingVoucher.getUser();
-            if (user != null) {
-                user.setBalance(user.getBalance() + existingVoucher.getPrice());
-                existingVoucher.setUser(null);
-                userRepository.save(user);
-            }
-        }
-
-        try {
-            VoucherStatus voucherStatus = VoucherStatus.valueOf(status.toUpperCase());
-            existingVoucher.setStatus(voucherStatus);
-        } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("Invalid status. Allowed values are: PAID, CANCELED");
-        }
-
-        Voucher savedVoucher = voucherRepository.save(existingVoucher);
-        voucherMapper.toVoucherDTO(savedVoucher);
-    }
-
-    @Override
-    public VoucherDTO changeHotStatus(String id, VoucherDTO voucherDTO) {
-        Voucher existingVoucher = voucherRepository.findById(UUID.fromString(id))
-                .orElseThrow(() -> new EntityNotFoundException("Voucher with Id " + id + " not found"));
-
-        existingVoucher.setHot(voucherDTO.getIsHot());
-
-        Voucher savedVoucher = voucherRepository.save(existingVoucher);
-
-        return voucherMapper.toVoucherDTO(savedVoucher);
-    }
-
-    @Override
-    public void cancelVoucher(String voucherId, UUID userId) {
-        Voucher voucher = voucherRepository.findById(UUID.fromString(voucherId))
-                .orElseThrow(() -> new EntityNotFoundException("Voucher not found"));
-
-        if (voucher.getUser() == null || !voucher.getUser().getId().equals(userId)) {
-            throw new IllegalStateException("You do not own this voucher");
-        }
-
-        if (voucher.getStatus() != VoucherStatus.PAID) {
-            throw new IllegalStateException("Only paid vouchers can be canceled");
-        }
-
-        User user = voucher.getUser();
-        user.setBalance(user.getBalance() + voucher.getPrice());
-        userRepository.save(user);
-
-        voucher.setUser(null);
-        voucher.setStatus(VoucherStatus.REGISTERED);
-
-        voucherRepository.save(voucher);
-    }
-
 
     @Override
     public VoucherDTO create(VoucherDTO voucherDTO) {
-        validateVoucherDates(voucherDTO);
+        Voucher voucher = modelMapper.map(voucherDTO, Voucher.class);
+        voucher.setId(UUID.randomUUID());
 
-        User user = null;
+        voucher.setTourType(TourType.valueOf(voucherDTO.getTourType()));
+        voucher.setTransferType(TransferType.valueOf(voucherDTO.getTransferType()));
+        voucher.setHotelType(HotelType.valueOf(voucherDTO.getHotelType()));
+        voucher.setStatus(VoucherStatus.valueOf(voucherDTO.getStatus()));
+
         if (voucherDTO.getUserId() != null) {
-            user = userRepository.findById(voucherDTO.getUserId())
-                    .orElseThrow(() -> new EntityNotFoundException("User not found"));
+            User user = userRepository.findById(voucherDTO.getUserId())
+                    .orElseThrow(() -> new NoSuchElementException("User not found"));
+            voucher.setUser(user);
         }
 
-        Voucher voucher = voucherMapper.toVoucher(voucherDTO, user);
-
-        Voucher savedVoucher = voucherRepository.save(voucher);
-
-        return voucherMapper.toVoucherDTO(savedVoucher);
+        voucher.setHot(Boolean.TRUE.equals(voucherDTO.getIsHot()));
+        return convertToDTO(voucherRepository.save(voucher));
     }
 
     @Override
-    public VoucherDTO orderVoucher(String voucherId, UUID userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+    public VoucherDTO order(String voucherId, String userId) {
+        UUID vId = UUID.fromString(voucherId);
+        UUID uId = UUID.fromString(userId);
 
-        Voucher voucher = voucherRepository.findById(UUID.fromString(voucherId))
-                .orElseThrow(() -> new EntityNotFoundException("Voucher not found"));
+        Voucher voucher = voucherRepository.findById(vId)
+                .orElseThrow(() -> new NoSuchElementException("Voucher not found"));
+        User user = userRepository.findById(uId)
+                .orElseThrow(() -> new NoSuchElementException("User not found"));
 
-        if (voucher.getUser() != null) {
-            throw new IllegalStateException("Voucher is already ordered");
+        if (user.getBalance().doubleValue() < voucher.getPrice()) {
+            throw new IllegalStateException("Not enough balance.");
         }
 
-        if (voucher.getStatus() == VoucherStatus.PAID || voucher.getStatus() == VoucherStatus.CANCELED) {
-            throw new IllegalStateException("Voucher with status 'PAID' or 'CANCELED' cannot be ordered");
-        }
-
-        if (user.getBalance() < voucher.getPrice()) {
-            throw new IllegalStateException("Insufficient funds to order this voucher");
-        }
-
-        user.setBalance(user.getBalance() - voucher.getPrice());
-        userRepository.save(user);
-
+        user.setBalance(user.getBalance().subtract(BigDecimal.valueOf(voucher.getPrice())));
         voucher.setUser(user);
-
         voucher.setStatus(VoucherStatus.PAID);
 
-        Voucher savedVoucher = voucherRepository.save(voucher);
-
-        return voucherMapper.toVoucherDTO(savedVoucher);
-    }
-
-    @Override
-    public VoucherDTO findById(String voucherId) {
-        Voucher voucher = voucherRepository.findById(UUID.fromString(voucherId))
-                .orElseThrow(() -> new EntityNotFoundException("Voucher with Id " + voucherId + " not found"));
-        return voucherMapper.toVoucherDTO(voucher);
+        userRepository.save(user);
+        return convertToDTO(voucherRepository.save(voucher));
     }
 
     @Override
     public VoucherDTO update(String id, VoucherDTO voucherDTO) {
-        Voucher existingVoucher = voucherRepository.findById(UUID.fromString(id))
-                .orElseThrow(() -> new EntityNotFoundException("Voucher with Id " + id + " not found"));
+        Voucher voucher = voucherRepository.findById(UUID.fromString(id))
+                .orElseThrow(() -> new NoSuchElementException("Voucher not found"));
 
-        if (existingVoucher.getStatus() == VoucherStatus.PAID) {
-            throw new IllegalStateException("Voucher status is PAID and cannot be modified. Change the status first.");
-        }
+        voucher.setTitle(voucherDTO.getTitle());
+        voucher.setDescription(voucherDTO.getDescription());
+        voucher.setPrice(voucherDTO.getPrice());
+        voucher.setArrivalDate(voucherDTO.getArrivalDate());
+        voucher.setEvictionDate(voucherDTO.getEvictionDate());
 
-        validateVoucherDates(voucherDTO);
+        if (voucherDTO.getTourType() != null)
+            voucher.setTourType(TourType.valueOf(voucherDTO.getTourType()));
+        if (voucherDTO.getTransferType() != null)
+            voucher.setTransferType(TransferType.valueOf(voucherDTO.getTransferType()));
+        if (voucherDTO.getHotelType() != null)
+            voucher.setHotelType(HotelType.valueOf(voucherDTO.getHotelType()));
+        if (voucherDTO.getStatus() != null)
+            voucher.setStatus(VoucherStatus.valueOf(voucherDTO.getStatus()));
+        if (voucherDTO.getIsHot() != null)
+            voucher.setHot(voucherDTO.getIsHot());
 
-        User user = null;
-        if (voucherDTO.getUserId() != null) {
-            user = userRepository.findById(voucherDTO.getUserId())
-                    .orElseThrow(() -> new EntityNotFoundException("User not found"));
-        }
-
-        Voucher updatedVoucher = voucherMapper.toVoucher(voucherDTO, user);
-        updatedVoucher.setId(existingVoucher.getId());
-
-        Voucher savedVoucher = voucherRepository.save(updatedVoucher);
-        return voucherMapper.toVoucherDTO(savedVoucher);
+        return convertToDTO(voucherRepository.save(voucher));
     }
 
     @Override
     public void delete(String voucherId) {
         UUID id = UUID.fromString(voucherId);
-
-        Voucher voucher = voucherRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Voucher with Id " + voucherId + " not found"));
-
-        if (voucher.getStatus() == VoucherStatus.PAID && voucher.getUser() != null) {
-            User user = voucher.getUser();
-            user.setBalance(user.getBalance() + voucher.getPrice());
-            userRepository.save(user);
+        if (!voucherRepository.existsById(id)) {
+            throw new NoSuchElementException("Voucher not found");
         }
-
         voucherRepository.deleteById(id);
     }
 
     @Override
+    public VoucherDTO changeHotStatus(String id, VoucherDTO voucherDTO) {
+        Voucher voucher = voucherRepository.findById(UUID.fromString(id))
+                .orElseThrow(() -> new NoSuchElementException("Voucher not found"));
+
+        voucher.setHot(Boolean.TRUE.equals(voucherDTO.getIsHot()));
+        return convertToDTO(voucherRepository.save(voucher));
+    }
+
+    @Override
     public List<VoucherDTO> findAllByUserId(String userId) {
-        return voucherRepository.findAllByUserId(UUID.fromString(userId)).stream()
-                .sorted((v1, v2) -> Boolean.compare(v2.isHot(), v1.isHot()))
-                .map(voucherMapper::toVoucherDTO)
-                .toList();
+        UUID id = UUID.fromString(userId);
+        return voucherRepository.findAllByUserId(id).stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Page<VoucherDTO> findAllByUserId(String userId, Pageable pageable) {
-        List<Voucher> allVouchers = voucherRepository.findAllByUserId(UUID.fromString(userId)).stream()
-                .sorted((v1, v2) -> Boolean.compare(v2.isHot(), v1.isHot()))
-                .toList();
-        return paginateList(allVouchers, pageable, voucherMapper::toVoucherDTO);
+    public List<VoucherDTO> findAllByTourType(TourType tourType) {
+        return voucherRepository.findAllByTourType(tourType).stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Page<VoucherDTO> filterVouchers(String tourType, String transferType, String hotelType, Double minPrice, Double maxPrice, Pageable pageable) {
-        List<Voucher> filteredVouchers = voucherRepository.findAll().stream()
-                .filter(v -> tourType == null || v.getTourType().name().equalsIgnoreCase(tourType))
-                .filter(v -> transferType == null || v.getTransferType().name().equalsIgnoreCase(transferType))
-                .filter(v -> hotelType == null || v.getHotelType().name().equalsIgnoreCase(hotelType))
-                .filter(v -> minPrice == null || v.getPrice() >= minPrice)
-                .filter(v -> maxPrice == null || v.getPrice() <= maxPrice)
-                .sorted((v1, v2) -> Boolean.compare(v2.isHot(), v1.isHot()))
-                .toList();
+    public List<VoucherDTO> findAllByTransferType(String transferType) {
+        return voucherRepository.findAllByTransferType(TransferType.valueOf(transferType)).stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+    }
 
-        return paginateList(filteredVouchers, pageable, voucherMapper::toVoucherDTO);
+    @Override
+    public List<VoucherDTO> findAllByPrice(Double price) {
+        return voucherRepository.findAllByPrice(price).stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<VoucherDTO> findAllByHotelType(HotelType hotelType) {
+        return voucherRepository.findAllByHotelType(hotelType).stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<VoucherDTO> findAll() {
         return voucherRepository.findAll().stream()
-                .sorted((v1, v2) -> Boolean.compare(v2.isHot(), v1.isHot()))
-                .map(voucherMapper::toVoucherDTO)
-                .toList();
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+    }
+
+    private VoucherDTO convertToDTO(Voucher voucher) {
+        VoucherDTO dto = modelMapper.map(voucher, VoucherDTO.class);
+
+        if (voucher.getUser() != null) {
+            dto.setUserId(voucher.getUser().getId());
+        }
+
+        dto.setTourType(voucher.getTourType() != null ? voucher.getTourType().name() : null);
+        dto.setTransferType(voucher.getTransferType() != null ? voucher.getTransferType().name() : null);
+        dto.setHotelType(voucher.getHotelType() != null ? voucher.getHotelType().name() : null);
+        dto.setStatus(voucher.getStatus() != null ? voucher.getStatus().name() : null);
+        dto.setIsHot(voucher.isHot());
+
+        return dto;
     }
 
     @Override
-    public Page<VoucherDTO> findAll(Pageable pageable) {
-        List<Voucher> allVouchers = voucherRepository.findAll().stream()
+    public List<VoucherDTO> findAllFilteredSorted(Double maxPrice, String tourType, String transferType, String hotelType) {
+        return voucherRepository.findAll().stream()
+                .filter(v -> (maxPrice == null || v.getPrice() <= maxPrice))
+                .filter(v -> (tourType == null || tourType.isEmpty() || v.getTourType().name().equals(tourType)))
+                .filter(v -> (transferType == null || transferType.isEmpty() || v.getTransferType().name().equals(transferType)))
+                .filter(v -> (hotelType == null || hotelType.isEmpty() || v.getHotelType().name().equals(hotelType)))
+                .filter(v -> v.getUser() == null || v.getStatus() != VoucherStatus.PAID)
                 .sorted((v1, v2) -> Boolean.compare(v2.isHot(), v1.isHot()))
-                .toList();
-        return paginateList(allVouchers, pageable, voucherMapper::toVoucherDTO);
-    }
-
-    private void validateVoucherDates(VoucherDTO voucherDTO) {
-        if (voucherDTO.getArrivalDate().isBefore(LocalDate.now())) {
-            throw new IllegalArgumentException("Arrival date cannot be in the past");
-        }
-        if (voucherDTO.getEvictionDate().isBefore(LocalDate.now())) {
-            throw new IllegalArgumentException("Eviction date cannot be in the past");
-        }
-        if (voucherDTO.getEvictionDate().isBefore(voucherDTO.getArrivalDate())) {
-            throw new IllegalArgumentException("Eviction date cannot be earlier than arrival date");
-        }
-    }
-
-    private Page<VoucherDTO> paginateList(List<Voucher> sourceList, Pageable pageable, Function<Voucher, VoucherDTO> mapper) {
-        int start = (int) pageable.getOffset();
-        int end = Math.min(start + pageable.getPageSize(), sourceList.size());
-
-        List<VoucherDTO> pagedList = sourceList.subList(start, end).stream()
-                .map(mapper)
+                .map(this::convertToDTO)
                 .collect(Collectors.toList());
-
-        return new PageImpl<>(pagedList, pageable, sourceList.size());
     }
-
 }
-
